# Relbatross

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/api/: uci_interaction.cpp  uci_interaction.h
src/basic/: hash.cpp  hash.h  init.cpp  init.h  types.h  utils.h
src/board/: board.cpp  board.h
src/uci/: uci_interaction.cpp  uci_interaction.h
test/: board_test.cpp
